<resources>
    <string name="Calculator">Calculator</string>
    <string name="enterA">Enter first number</string>
    <string name="enterB">Enter second number</string>
    <string name="add">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="result">Result</string>
    <string name="navigation">Navigation</string>
    <string name="back">Back</string>
</resources>