<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etA"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:hint="@string/enterA"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etB"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:hint="@string/enterB"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/etA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/etB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/add"
            android:layout_margin="4dp"
            app:layout_constraintHorizontal_weight="1"/>

        <Button
            android:id="@+id/btnSubtraction"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/subtraction"
            android:layout_margin="4dp"
            app:layout_constraintHorizontal_weight="1"/>

        <Button
            android:id="@+id/btnMultiplication"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/multiplication"
            android:layout_margin="4dp"
            app:layout_constraintHorizontal_weight="1"/>

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/division"
            android:layout_margin="4dp"
            app:layout_constraintHorizontal_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/buttonLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/nave"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/navigation"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/resultTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
